force-app/main/default/objects/Welfare_Assessment__c/Welfare_Assessment__c.object-meta.xml
<CustomObject>
    <description
  >Historical welfare assessment event linked to an animal episode.</description>
    <label>Welfare Assessment</label>
    <nameField>
        <label>Welfare Assessment Number</label>
        <displayFormat>WA-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welfare Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>