force-app/main/default/objects/Welfare_Assessment__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <description
  >Animal linked redundantly for direct reporting and quick access.</description>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Welfare Assessments</relationshipLabel>
    <relationshipName>Welfare_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>