force-app/main/default/objects/Welfare_Assessment__c/fields/Animal_Episode__c.field-meta.xml
<CustomField>
    <fullName>Animal_Episode__c</fullName>
    <description
  >Episode that owns the historical welfare assessment.</description>
    <label>Animal Episode</label>
    <referenceTo>Animal_Episode__c</referenceTo>
    <relationshipLabel>Welfare Assessments</relationshipLabel>
    <relationshipName>Welfare_Assessments</relationshipName>
    <type>MasterDetail</type>
</CustomField>