force-app/main/default/objects/Welfare_Assessment__c/fields/Assessment_Context__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Context__c</fullName>
    <description
  >Operational context in which the assessment occurred.</description>
    <label>Assessment Context</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Routine</fullName>
                <default>true</default>
                <label>Routine</label>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Outcome</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>