force-app/main/default/objects/Welfare_Assessment__c/fields/Assessment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Assessment_DateTime__c</fullName>
    <description>When the assessment was completed or recorded.</description>
    <inlineHelpText
  >This value is required when the assessment is completed.</inlineHelpText>
    <label>Assessment Date Time</label>
    <type>DateTime</type>
</CustomField>