force-app/main/default/objects/Welfare_Assessment__c/fields/Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Status__c</fullName>
    <description>Lifecycle state of the assessment record.</description>
    <label>Assessment Status</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <default>true</default>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>