force-app/main/default/objects/Welfare_Assessment__c/fields/Assessment_Template__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Template__c</fullName>
    <description>Runtime template used to capture the assessment.</description>
    <label>Assessment Template</label>
    <referenceTo>Assessment_Template__c</referenceTo>
    <relationshipLabel>Welfare Assessments</relationshipLabel>
    <relationshipName>Welfare_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>