force-app/main/default/objects/Welfare_Assessment__c/fields/Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Type__c</fullName>
    <description>Type of assessment event.</description>
    <label>Assessment Type</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
                <default>true</default>
                <label>Baseline</label>
            </value>
            <value>
                <fullName>Reassessment</fullName>
            </value>
            <value>
                <fullName>Spot Check</fullName>
            </value>
            <value>
                <fullName>Triggered Review</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>