force-app/main/default/objects/Welfare_Assessment__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <description>User who completed or owns the assessment event.</description>
    <label>Assessor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Welfare Assessments</relationshipLabel>
    <relationshipName>Welfare_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>