force-app/main/default/objects/Welfare_Assessment__c/fields/Completeness__c.field-meta.xml
<CustomField>
    <fullName>Completeness__c</fullName>
    <description
  >System-calculated completeness percentage for required domains and indicators.</description>
    <label>Completeness</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>