force-app/main/default/objects/Welfare_Assessment__c/fields/Domain_5_Mental_State_Summary__c.field-meta.xml
<CustomField>
    <fullName>Domain_5_Mental_State_Summary__c</fullName>
    <description
  >Narrative mental-state inference made from the combined evidence.</description>
    <label>Domain 5 Mental State Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>