force-app/main/default/objects/Welfare_Assessment__c/fields/Immediate_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Action_Required__c</fullName>
    <description
  >Flags assessments that require immediate escalation or intervention.</description>
    <label>Immediate Action Required</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>