force-app/main/default/objects/Welfare_Assessment__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <description>Planned next welfare review date.</description>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>