force-app/main/default/objects/Welfare_Assessment__c/fields/Overall_Negative_Grade__c.field-meta.xml
<CustomField>
    <fullName>Overall_Negative_Grade__c</fullName>
    <description
  >Overall negative-grade summary for the assessment.</description>
    <label>Overall Negative Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Negative_Grade</valueSetName>
    </valueSet>
</CustomField>