force-app/main/default/objects/Welfare_Assessment__c/fields/Overall_Positive_Grade__c.field-meta.xml
<CustomField>
    <fullName>Overall_Positive_Grade__c</fullName>
    <description
  >Overall positive-grade summary for the assessment.</description>
    <label>Overall Positive Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Positive_Grade</valueSetName>
    </valueSet>
</CustomField>