force-app/main/default/objects/Welfare_Assessment__c/fields/Overall_Welfare_Concern__c.field-meta.xml
<CustomField>
    <fullName>Overall_Welfare_Concern__c</fullName>
    <description
  >Overall welfare concern assigned by metadata-driven risk evaluation.</description>
    <label>Overall Welfare Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Welfare_Risk</valueSetName>
    </valueSet>
</CustomField>