force-app/main/default/objects/Welfare_Assessment__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <description>Optional case linked to the welfare assessment.</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Welfare Assessments</relationshipLabel>
    <relationshipName>Welfare_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>