force-app/main/default/objects/Welfare_Assessment__c/fields/Risk_Evaluated_On__c.field-meta.xml
<CustomField>
    <fullName>Risk_Evaluated_On__c</fullName>
    <description
  >Timestamp of the latest risk-evaluation pass for the assessment.</description>
    <label>Risk Evaluated On</label>
    <type>DateTime</type>
</CustomField>