force-app/main/default/objects/Welfare_Assessment__c/fields/Template_Code_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Template_Code_Snapshot__c</fullName>
    <description
  >Runtime template code captured when the assessment was completed.</description>
    <label>Template Code Snapshot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>