force-app/main/default/objects/Welfare_Assessment__c/fields/Template_Key_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Template_Key_Snapshot__c</fullName>
    <description
  >Packaged template key captured when the assessment was completed.</description>
    <label>Template Key Snapshot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>