force-app/main/default/objects/Welfare_Assessment__c/fields/Template_Version_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Template_Version_Snapshot__c</fullName>
    <description
  >Runtime template version captured when the assessment was completed.</description>
    <label>Template Version Snapshot</label>
    <length>20</length>
    <type>Text</type>
</CustomField>