force-app/main/default/objects/Welfare_Assessment__c/validationRules/A360_Completed_Assessment_Req.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description
  >Completed assessments must store both assessor and assessment date/time.</description>
    <errorConditionFormula
  >AND(ISPICKVAL(Assessment_Status__c, &quot;Completed&quot;), OR(ISBLANK(Assessor__c), ISBLANK(Assessment_DateTime__c)))</errorConditionFormula>
    <errorMessage
  >Completed assessments require both an assessor and an assessment date/time.</errorMessage>
    <fullName>A360_Completed_Assessment_Req</fullName>
</ValidationRule>