force-app/main/default/objects/Welfare_Assessment__c/validationRules/A360_Immediate_Action_Requires_Concern.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description
  >Immediate action cannot be checked unless an overall welfare concern is set.</description>
    <errorConditionFormula
  >AND(Immediate_Action_Required__c, ISPICKVAL(Overall_Welfare_Concern__c, &quot;&quot;))</errorConditionFormula>
    <errorMessage
  >Set the overall welfare concern before marking immediate action required.</errorMessage>
    <fullName>A360_Immediate_Action_Requires_Concern</fullName>
</ValidationRule>